[metadata]
name = Flask_Testing
version = 1.0.0
author = Dragonsight91
description = "An API for our professor's website, because it got annoying to use."
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.9
install_requires =
    Flask
    requests
    lxml
    beautifulsoup4

[options.packages.find]
where = src